test/classes/errors/nilability-assign/assign-oknil-owned-from-nonnil-shared.good
assign-oknil-owned-from-nonnil-shared.chpl:8: error: Cannot assign to owned MyClass? from shared MyClass
